SUKU invitation layout done

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             height: 100vh;
             align-items: center; /* Vertically center the child elements */
             justify-content: center; /* Horizontally */
+            max-width: 600px;
         }
         h1 {
             color: #333;
@@ -54,8 +55,9 @@
 
         <div class="wedding-details">
             <img src="hero.jpeg" width="500px" alt="Wedding Venue"/>
-            <h1>Nonó és Gergő</h1>
-            <p class="date-location">Időpont: 2024.06.07.</p>
+            <img src="title.png" width="500px" alt="Wedding Venue"/>
+            <p class="date-location">Időpont: 2024.06.07. 16:00
+            </p>
             
             <p class="date-location">Helyszín: Rosinante fogadó, Szigetmonostor</p>
         </div>
